force-app/main/default/objects/PH_UnifiedAPI_Landing__c/PH_UnifiedAPI_Landing__c.object-meta.xml
<CustomObject>
    <label>PH UnifiedAPI Landing</label>
    <nameField>
        <label>PH UnifiedAPI Landing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PH UnifiedAPI Landings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>