force-app/main/default/objects/PH_UnifiedAPI_Landing__c/fields/addr_city__c.field-meta.xml
<CustomField>
    <fullName>addr_city__c</fullName>
    <label>Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>