force-app/main/default/objects/PH_UnifiedAPI_Landing__c/fields/addr_postalcode__c.field-meta.xml
<CustomField>
    <fullName>addr_postalcode__c</fullName>
    <label>Address Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>