force-app/main/default/objects/PH_UnifiedAPI_Landing__c/fields/br_scoopsperserving__c.field-meta.xml
<CustomField>
    <fullName>br_scoopsperserving__c</fullName>
    <label>BR Scoops Per Serving</label>
    <length>255</length>
    <type>Text</type>
</CustomField>