force-app/main/default/objects/PH_UnifiedAPI_Landing__c/fields/contact_consumer__c.field-meta.xml
<CustomField>
    <fullName>contact_consumer__c</fullName>
    <label>Contact Consumer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>