force-app/main/default/objects/PH_UnifiedAPI_Landing__c/fields/contact_dob__c.field-meta.xml
<CustomField>
    <fullName>contact_dob__c</fullName>
    <label>Contact DOB</label>
    <length>100</length>
    <type>Text</type>
</CustomField>