force-app/main/default/objects/PH_UnifiedAPI_Landing__c/fields/contact_edd__c.field-meta.xml
<CustomField>
    <fullName>contact_edd__c</fullName>
    <label>Contact EDD</label>
    <length>100</length>
    <type>Text</type>
</CustomField>