force-app/main/default/objects/PH_UnifiedAPI_Landing__c/fields/contact_email__c.field-meta.xml
<CustomField>
    <fullName>contact_email__c</fullName>
    <label>Contact Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>