force-app/main/default/objects/PH_UnifiedAPI_Landing__c/fields/contact_firstname__c.field-meta.xml
<CustomField>
    <fullName>contact_firstname__c</fullName>
    <label>Contact Firstname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>