force-app/main/default/objects/PH_UnifiedAPI_Landing__c/fields/contact_is_three_and_above__c.field-meta.xml
<CustomField>
    <fullName>contact_is_three_and_above__c</fullName>
    <label>Contact Is Three And Above</label>
    <length>100</length>
    <type>Text</type>
</CustomField>