force-app/main/default/objects/PH_UnifiedAPI_Landing__c/fields/contact_whatsapp_verified__c.field-meta.xml
<CustomField>
    <fullName>contact_whatsapp_verified__c</fullName>
    <label>Contact Whatsapp Verified</label>
    <length>100</length>
    <type>Text</type>
</CustomField>