force-app/main/default/objects/PH_UnifiedAPI_Landing__c/fields/cr_receive_discount_card__c.field-meta.xml
<CustomField>
    <fullName>cr_receive_discount_card__c</fullName>
    <label>CR Receive Discount Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>