force-app/main/default/objects/PH_UnifiedAPI_Landing__c/fields/cr_utmstring__c.field-meta.xml
<CustomField>
    <fullName>cr_utmstring__c</fullName>
    <label>CR UTM String</label>
    <length>100</length>
    <type>Text</type>
</CustomField>