force-app/main/default/objects/PH_UnifiedAPI_Landing__c/fields/error_handle_3__c.field-meta.xml
<CustomField>
    <fullName>error_handle_3__c</fullName>
    <label>Error Handle 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>