force-app/main/default/objects/PH_UnifiedAPI_Landing__c/fields/nh_child_shorter__c.field-meta.xml
<CustomField>
    <fullName>nh_child_shorter__c</fullName>
    <label>NH Child Shorter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>