force-app/main/default/objects/PH_UnifiedAPI_Landing__c/fields/nh_diabetic_treatment__c.field-meta.xml
<CustomField>
    <fullName>nh_diabetic_treatment__c</fullName>
    <label>NH Diabetic Treatment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>