force-app/main/default/objects/PH_UnifiedAPI_Landing__c/fields/pardot_comments__c.field-meta.xml
<CustomField>
    <fullName>pardot_comments__c</fullName>
    <label>Pardot Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>